# AgentFactory

./: .gitignore  DOCS_ORGANIZATION.md  README.md  cli.py  docker-compose.distributed.yml  docker-compose.yml  pyproject.toml  run_demo.sh  walkthrough.py
configs/blueprints/: coordinator_agent.yaml  ingestor_agent.yaml  iowarp_agent.yaml  iowarp_distributed.yaml  my_test_agent.yaml  retriever_agent.yaml
configs/pipelines/: ingest_retrieve.yaml
docker/iowarp/: Dockerfile  bridge.py  cte_helper.cpp  wrp_cee.py  wrp_cee_ctypes.py  wrp_conf.yaml
docs/: ARCHITECTURE.md  README.md
docs/architecture/: ARCHITECTURE_FLOW.md  COORDINATOR_ANALYSIS.md  CURRENT_IMPLEMENTATION.md  HOW_IT_WORKS.md  SYSTEM_ARCHITECTURE_EXPLAINED.md  agent_factory_design.md  flow.md
docs/demo/: COMPLETE_DEMO.md  DEMO_GUIDE.md  MANUAL_WALKTHROUGH.md  PRUNE_VS_DESTROY.md  TEST_RESULTS.md  VALIDATION_RESULTS.md
docs/planning/: PLAN_agent_management.md
old_docs/: agentgym_agentfactory_workflow.md
src/agent_factory/: __init__.py
src/agent_factory/agents/: __init__.py  claude_agent.py  coordinator_agent.py  ingestor_agent.py  iowarp_agent.py  llm_agent.py  retriever_agent.py
src/agent_factory/core/: __init__.py  errors.py  protocols.py  types.py
src/agent_factory/iowarp/: cache.py  (+4 more)
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_bridge.py  test_iowarp_env.py  test_memcached.py
tests/unit/: test_agents.py  test_cache.py  test_dag.py  test_executor.py  test_ingestor_agent.py  test_registry.py  test_retriever_agent.py  test_types.py  test_uri_resolver.py
(+9 files in other folders)
