[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-factory"
version = "0.1.0"
description = "IOWarp agent blueprint for AgentFactory"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=25.0",
    "pymemcache>=4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "ollama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Docker services (deselect with '-m \"not integration\"')",
    "e2e: end-to-end tests requiring full stack (deselect with '-m \"not e2e\"')",
]
